    its current version.
  - now compatible with additional servers (fixed some SyncML
    protocol issues, added support for sending device
    information)
  - revised API of the client library
  - #305795: for tasks the "text/x-todo" type from the configuration
    was sent to servers instead of the correct "text/calendar"
    provided by SyncEvolution itself
* updated default syncml/config.txt: firstTimeSyncMode has never
  been implemented in the library, removed its documentation
* changed vCard parser to make it compatible with servers
  which send a verbatim semicolon as part of properties where
  the semicolon has no special meaning
* If minor errors occur like not being able to insert an
  item at the client or server side, then it is reported in the
  log and output, but the next synchronization will be a normal
  synchronization, not a forced slow one as in previous versions.
  The old approach ensured that the problem was noticed and fixed,
  but required user assistance. With the new approach synchronization
  continues to work, although without fixing the root cause of
  the problem.



SyncEvolution 0.3, 2006-06-27
-----------------------------

* added syncing of calendars and tasks as iCalendar 2.0
* added syncing of contacts as vCard 3.0
* tested extensively with sync.scheduleworld.com and
  added an example configuration for it
* uses C++ client library revision "wmplugin_3_0_20"
  which contains several bug fixes, among them proper
  support for special characters and memory handling
  fixes
* much nicer listing of changes made during a sync,
  handled by the improved "synccompare" utility script
  (formerly known as "normalize_vcard")
* improved automated testing


SyncEvolution 0.2, 2006-03-19
-----------------------------

* added automatic backup mechanism and log storage,
  see "Automatic Backups and Logging".
* output no longer is the original log data, but rather
  a human-readable report of errors and synchronization
  results.